# ChangeLog for sci-mathematics/dataplot
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/sci-mathematics/cvs-repo/gentoo-x86/sci-mathematics/dataplot/ChangeLog,v 1.6 2009/02/20 17:36:44 gentoofan23 Exp $

  20 Feb 2009; Thomas Anderson <gentoofan23@gentoo.org>
  dataplot-20080225.ebuild:
  Migrate to EAPI 2 use deps

  06 Aug 2008; Ulrich Mueller <ulm@gentoo.org> metadata.xml:
  Add USE flag description to metadata wrt GLEP 56.

  01 Jul 2008; Thomas Anderson <gentoofan23@gentoo.org>
  dataplot-20080225.ebuild:
  Remove unnecessary inherit

  20 Jun 2008; Thomas Anderson (gentoofan23) <gentoofan23@gentoo.org>
  metadata.xml:
  Fix my email address

  04 Jun 2008; Sébastien Fabbro <bicatali@gentoo.org>
  dataplot-20080225.ebuild:
  Fixed directory changes

*dataplot-20080225 (04 Jun 2008)

  04 Jun 2008; Sébastien Fabbro <bicatali@gentoo.org>
  +files/dpsrc-dp1patches-20080225.patch, +files/90dataplot,
  +files/dpsrc-patchset-20080225.patch, +files/Makefile.am.20080225,
  +files/configure.ac.20080225, +metadata.xml, +dataplot-20080225.ebuild:
  Initial import from sunrise. Proxy-maintaining for Thomas Anderson

  30 May 2008; Thomas Anderson (gentoofan23) <gentoofan23@gmail.com>
  dataplot-20080225-r1.ebuild, -files/dpsrc-maxobvvalue-20080225.patch,
  files/dpsrc-dp1patches-20080225.patch, -files/Makefile.am,
  +files/Makefile.am.20080225, -files/configure.ac,
  +files/configure.ac.20080225:
  Merge maxobvvalue into dp1patches. Move dataplot's Makefile.am and
  configure.ac to {configure.ac,Makefile.am}.${PV}. Add || die to doins and
  econf

  30 May 2008; Thomas Anderson (gentoofan23) <gentoofan23@gmail.com>
  dataplot-20080225-r1.ebuild:
  tweak fortran checks

  30 May 2008; Thomas Anderson (gentoofan23) <gentoofan23@gmail.com>
  -files/dpsrc-datadir-20080225.patch:
  Remove obsolete patches that have been incorporated into dp1patches
