@@ -1,6 +1,10 @@
 # ChangeLog for sci-mathematics/dataplot
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sci-mathematics/cvs-repo/gentoo-x86/sci-mathematics/dataplot/ChangeLog,v 1.6 2009/02/20 17:36:44 gentoofan23 Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sci-mathematics/cvs-repo/gentoo-x86/sci-mathematics/dataplot/ChangeLog,v 1.7 2009/02/20 17:39:12 gentoofan23 Exp $
+
+  20 Feb 2009; Thomas Anderson <gentoofan23@gentoo.org>
+  dataplot-20080225.ebuild:
+  Fix EAPI 2 function additions
 
   20 Feb 2009; Thomas Anderson <gentoofan23@gentoo.org>
   dataplot-20080225.ebuild:
